tests/MathML/basic/good/15.mml
<math display="block">
  <mrow>
    <msup>
      <mn>2</mn>
      <msup>
        <mn>2</mn>
        <msup>
          <mn>2</mn>
          <mi>x</mi>
        </msup>
      </msup>
    </msup>
  </mrow>
</math>